fix chart